This is my nginx server

--- a/deploy_webserver.yaml
+++ b/deploy_webserver.yaml
@@ -1,5 +1,5 @@
 - name: Install and Configure Nginx
-  hosts: all
+  hosts: local
   become: yes
   pre_tasks:
   - name: Set SSH user for Ubuntu systems
