--- a/kube-dependencies.yml
+++ b/kube-dependencies.yml
@@ -1,151 +1,154 @@
-- name: Kubernetes Dependencies
-  hosts: all
+- hosts: all
   become: yes
   tasks:
-    - name: Updates
+    - fail:
+       msg: "OS should be Ubuntu 22.04, not {{ ansible_distribution }} {{ ansible_distribution_version }}"
+      when: ansible_distribution != 'Ubuntu' or ansible_distribution_version != '22.04'
+
+    - name: update APT packages
       apt:
         update_cache: yes
 
-    - name: Reboot
+    - name: reboot and wait for reboot to complete
       reboot:
 
-    - name: Disable SWAP
+    - name: disable SWAP (Kubeadm requirement)
       shell: |
         swapoff -a
 
-    - name: Disable SWAP in fstab
+    - name: disable SWAP in fstab (Kubeadm requirement)
       replace:
         path: /etc/fstab
         regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
         replace: '# \1'
 
-    - name: Create an empty file for the containerd module
+    - name: create an empty file for the Containerd module
       copy:
         content: ""
         dest: /etc/modules-load.d/containerd.conf
         force: no
 
-    - name: Configure modules for containerd
+    - name: configure modules for Containerd
       blockinfile:
         path: /etc/modules-load.d/containerd.conf
         block: |
-          overlay
-          br_netfilter
+             overlay
+             br_netfilter
 
-    - name: Create an empty file for K8S sysctl parameters
+    - name: create an empty file for Kubernetes sysctl params
       copy:
         content: ""
         dest: /etc/sysctl.d/99-kubernetes-cri.conf
         force: no
 
-    - name: Configure sysctl parameters for K8S
+    - name: configure sysctl params for Kubernetes
       lineinfile:
         path: /etc/sysctl.d/99-kubernetes-cri.conf
         line: "{{ item }}"
       with_items:
-        - "net.bridge.bridge-nf-call-iptables  = 1"
-        - "net.ipv4.ip_forward                 = 1"
-        - "net.bridge.bridge-nf-call-ip6tables = 1"
+        - 'net.bridge.bridge-nf-call-iptables  = 1'
+        - 'net.ipv4.ip_forward                 = 1'
+        - 'net.bridge.bridge-nf-call-ip6tables = 1'
 
-    - name: Apply sysctl parameters
+    - name: apply sysctl params without reboot
       command: sysctl --system
 
-    - name: Install APT Transport HTTPS
+    - name: install APT Transport HTTPS
       apt:
         name: apt-transport-https
         state: present
 
-    - name: Add Docker apt-key
+    - name: add Docker apt-key
       get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker-apt-keyring.asc
-        mode: "0644"
+        mode: '0644'
         force: true
 
-    - name: Add Docker's APT repo
+    - name: add Docker's APT repository
       apt_repository:
         repo: "deb [arch={{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' }} signed-by=/etc/apt/keyrings/docker-apt-keyring.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         update_cache: yes
 
-    - name: Add Kubernetes apt-key
+    - name: add Kubernetes apt-key
       get_url:
         url: https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key
         dest: /etc/apt/keyrings/kubernetes-apt-keyring.asc
-        mode: "0644"
+        mode: '0644'
         force: true
 
-    - name: Add Kubernetes APT repository
+    - name: add Kubernetes' APT repository
       apt_repository:
         repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.asc] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /"
         state: present
         update_cache: yes
 
-    - name: Install containerd
+    - name: install Containerd
       apt:
         name: containerd.io
         state: present
 
-    - name: Create containerd directory
+    - name: create Containerd directory
       file:
         path: /etc/containerd
         state: directory
 
-    - name: Add containerd configuration
+    - name: add Containerd configuration
       shell: /usr/bin/containerd config default > /etc/containerd/config.toml
 
-    - name: Configuring Systemd cgroup driver for containerd
+    - name: configuring the systemd cgroup driver for Containerd
       lineinfile:
         path: /etc/containerd/config.toml
-        regexp: "            SystemdCgroup = false"
-        line: "            SystemdCgroup = true"
+        regexp: '            SystemdCgroup = false'
+        line: '            SystemdCgroup = true'
 
-    - name: Enable the containerd service and start service
+    - name: enable the Containerd service and start it
       systemd:
         name: containerd
         state: restarted
         enabled: yes
         daemon-reload: yes
 
-    - name: Install Kubelet
+    - name: install Kubelet
       apt:
         name: kubelet=1.29.*
         state: present
         update_cache: true
 
-    - name: Install Kubeadm
+    - name: install Kubeadm
       apt:
         name: kubeadm=1.29.*
         state: present
 
-    - name: Enable the Kubelet service
+    - name: enable the Kubelet service, and enable it persistently
       service:
         name: kubelet
         enabled: yes
 
-    - name: Load br_netfilter kernel module
+    - name: load br_netfilter kernel module
       modprobe:
         name: br_netfilter
         state: present
 
-    - name: Set bridge-nf-call-iptables
+    - name: set bridge-nf-call-iptables
       sysctl:
         name: net.bridge.bridge-nf-call-iptables
         value: 1
 
-    - name: Set ip_forward
+    - name: set ip_forward
       sysctl:
         name: net.ipv4.ip_forward
         value: 1
 
-    - name: Reboot
+    - name: reboot and wait for reboot to complete
       reboot:
 
 - hosts: master
   become: yes
   tasks:
-    - name: Install Kubectl
+    - name: install Kubectl
       apt:
         name: kubectl=1.29.*
         state: present
-        force: yes
+        force: yes # allow downgrades
