ansible k8s-worker manifest file

--- a/workers.yml
+++ b/workers.yml
@@ -12,10 +12,13 @@
 
 
 - hosts: workers
-  become: yes
   tasks:
     - name: TCP port 6443 on master is reachable from worker
-      wait_for: "host={{ hostvars['master']['ansible_default_ipv4']['address'] }} port=6443 timeout=1"
+      wait_for:
+        port: 6443
+        host: "{{ hostvars[groups['master'][0]].ansible_host }}"
+        state: started
+        timeout: 10
 
     - name: join cluster
       shell: "{{ hostvars['master'].join_command }} >> node_joined.log"
