--- a/kube-dependencies.yml
+++ b/kube-dependencies.yml
@@ -1,145 +1,148 @@
-- hosts: all
+- name: Kubernetes Dependencies
+  hosts: all
   become: yes
   tasks:
-
-    - name: update APT packages
+    - name: Updates
       apt:
         update_cache: yes
 
-    - name: disable SWAP (Kubeadm requirement)
+    - name: Disable SWAP
       shell: |
         swapoff -a
 
-    - name: disable SWAP in fstab (Kubeadm requirement)
+    - name: Disable SWAP in fstab
       replace:
         path: /etc/fstab
         regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
         replace: '# \1'
 
-    - name: create an empty file for the Containerd module
+    - name: Create an empty file for the containerd module
       copy:
         content: ""
         dest: /etc/modules-load.d/containerd.conf
         force: no
 
-    - name: configure modules for Containerd
+    - name: Configure modules for containerd
       blockinfile:
         path: /etc/modules-load.d/containerd.conf
         block: |
-             overlay
-             br_netfilter
+          overlay
+          br_netfilter
 
-    - name: create an empty file for Kubernetes sysctl params
+    - name: Create an empty file for K8S sysctl parameters
       copy:
         content: ""
         dest: /etc/sysctl.d/99-kubernetes-cri.conf
         force: no
 
-    - name: configure sysctl params for Kubernetes
+    - name: Configure sysctl parameters for K8S
       lineinfile:
         path: /etc/sysctl.d/99-kubernetes-cri.conf
         line: "{{ item }}"
       with_items:
-        - 'net.bridge.bridge-nf-call-iptables  = 1'
-        - 'net.ipv4.ip_forward                 = 1'
-        - 'net.bridge.bridge-nf-call-ip6tables = 1'
+        - "net.bridge.bridge-nf-call-iptables  = 1"
+        - "net.ipv4.ip_forward                 = 1"
+        - "net.bridge.bridge-nf-call-ip6tables = 1"
 
-    - name: apply sysctl params without reboot
+    - name: Apply sysctl parameters
       command: sysctl --system
 
-    - name: install APT Transport HTTPS
+    - name: Install APT Transport HTTPS
       apt:
         name: apt-transport-https
         state: present
 
-    - name: add Docker apt-key
+    - name: Add Docker apt-key
       get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker-apt-keyring.asc
-        mode: '0644'
+        mode: "0644"
         force: true
 
-    - name: add Docker's APT repository
+    - name: Add Docker's APT repo
       apt_repository:
         repo: "deb [arch={{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' }} signed-by=/etc/apt/keyrings/docker-apt-keyring.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         update_cache: yes
 
-    - name: add Kubernetes apt-key
+    - name: Add Kubernetes apt-key
       get_url:
         url: https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key
         dest: /etc/apt/keyrings/kubernetes-apt-keyring.asc
-        mode: '0644'
+        mode: "0644"
         force: true
 
-    - name: add Kubernetes' APT repository
+    - name: Add Kubernetes APT repository
       apt_repository:
         repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.asc] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /"
         state: present
         update_cache: yes
 
-    - name: install Containerd
+    - name: Install containerd
       apt:
         name: containerd.io
         state: present
 
-    - name: create Containerd directory
+    - name: Create containerd directory
       file:
         path: /etc/containerd
         state: directory
 
-    - name: add Containerd configuration
+    - name: Add containerd configuration
       shell: /usr/bin/containerd config default > /etc/containerd/config.toml
 
-    - name: configuring the systemd cgroup driver for Containerd
+    - name: Configuring Systemd cgroup driver for containerd
       lineinfile:
         path: /etc/containerd/config.toml
-        regexp: '            SystemdCgroup = false'
-        line: '            SystemdCgroup = true'
+        regexp: "            SystemdCgroup = false"
+        line: "            SystemdCgroup = true"
 
-    - name: enable the Containerd service and start it
+    - name: Enable the containerd service and start service
       systemd:
         name: containerd
         state: restarted
         enabled: yes
         daemon-reload: yes
 
-    - name: install Kubelet
+    - name: Install Kubelet
       apt:
         name: kubelet=1.29.*
         state: present
         update_cache: true
 
-    - name: install Kubeadm
+    - name: Install Kubeadm
       apt:
         name: kubeadm=1.29.*
         state: present
 
-    - name: enable the Kubelet service, and enable it persistently
+    - name: Enable the Kubelet service
       service:
         name: kubelet
         enabled: yes
 
-    - name: load br_netfilter kernel module
+    - name: Load br_netfilter kernel module
       modprobe:
         name: br_netfilter
         state: present
 
-    - name: set bridge-nf-call-iptables
+    - name: Set bridge-nf-call-iptables
       sysctl:
         name: net.bridge.bridge-nf-call-iptables
         value: 1
 
-    - name: set ip_forward
+    - name: Set ip_forward
       sysctl:
         name: net.ipv4.ip_forward
         value: 1
 
+    - name: Reboot
+      reboot:
+
 - hosts: master
   become: yes
   tasks:
-    - name: install Kubectl
+    - name: Install Kubectl
       apt:
         name: kubectl=1.29.*
         state: present
-        force: yes # allow downgrades
+        force: yes
